--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1{
 }
 
 body {
-
+    color:white;
    background-color: #A8DADC;
     background-image:url(computer.jpg);
    background-size: cover;
